--- a/package.json
+++ b/package.json
@@ -55,5 +55,6 @@
   "devDependencies": {
     "react-app-rewired": "^2.1.5",
     "redux-devtools-extension": "^2.13.8"
-  }
+  },
+  "homepage": "/"
 }
