--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.1",
     "@testing-library/user-event": "^7.2.1",
+    "@types/classnames": "^2.2.10",
     "@types/jest": "^24.9.1",
     "@types/node": "^12.12.28",
     "@types/react": "^16.9.22",
@@ -17,9 +18,12 @@
     "@types/styled-components": "^5.0.0",
     "antd": "^3.26.11",
     "babel-plugin-import": "^1.13.0",
+    "classnames": "^2.2.6",
+    "css-vars": "^2.2.0",
     "customize-cra": "^0.9.1",
     "less": "^3.10.3",
     "less-loader": "^5.0.0",
+    "node-sass": "^4.14.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-redux": "^7.2.0",
@@ -54,7 +58,11 @@
   },
   "devDependencies": {
     "react-app-rewired": "^2.1.5",
-    "redux-devtools-extension": "^2.13.8"
+    "redux-devtools-extension": "^2.13.8",
+    "eslint-plugin-react-hooks": "^4.0.4",
+    "react-redux-typescript-scripts": "^1.6.2",
+    "tslint": "^6.1.2",
+    "tslint-react": "^5.0.0"
   },
   "homepage": "/"
 }
