--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,19 +1,8 @@
 {
+	"include": ["src"],
+	"extends": "./node_modules/react-redux-typescript-scripts/tsconfig.json",
 	"compilerOptions": {
-		"allowJs": true,
-		"allowSyntheticDefaultImports": true,
-		"esModuleInterop": true,
-		"forceConsistentCasingInFileNames": true,
-		"isolatedModules": true,
-		"jsx": "react",
 		"lib": ["dom", "dom.iterable", "esnext"],
-		"module": "esnext",
-		"moduleResolution": "node",
-		"noEmit": true,
-		"resolveJsonModule": true,
-		"skipLibCheck": true,
-		"strict": true,
-		"target": "es6"
-	},
-	"include": ["src"]
+		"downlevelIteration": true
+	}
 }
